@@ -42,6 +42,7 @@ Cacti CHANGELOG
 -feature: Disable snmpbulkwalk if $max_oids is less than 2
 -feature: Add additional options to speed data query graph automation process
 -feature: Add additional indexes to speed data query graph creation
+-feature: Allow the cli reindexing of hosts to be limited to a single query
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
